# multimodal

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  VERSION_CONTROL.md  data_process.ipynb  environment.yml  example  example-write  example-write.pub  example.pub  pyproject.toml  test.ipynb  test.parquet  test.py
MultimodalDataset/: ClimateData.py  FinanceData.py  GasData.py  MedicalData.py  Processor.py  ___init__.py
config/: kube.yaml  launch.yaml
evaluator/: Evaluator.py  gpt_evaluator.py  metrics.py
financial/: EDA.ipynb  README.md  combine_chunk.ipynb  combine_chunk.py  dev.ipynb  download_raw_texts.py  financial_url_text.ipynb  finetuning.py  main.py  main_all.py  main_single_file.py  run_all_tickers.sh  run_parallel.sh  summarize_chunk.py  summary.py  vllm.ipynb
finetune/: climate-1_day.yml  climate-1day.yml  climate-2day.yml  climate-3day.yml  climate-4day.yml  climate-7day-mixed.yml  climate-7day.yml  climate-cal copy.yml  climate-cal-multi.yml  climate-cal.yml  climate-dc.yml  climate.yml  climate_numerical.yml  climate_precip.yml  climate_summary.yml  finance_all.yml  finance_mixed_numerical.yml  finance_mixed_numerical_5days.yml  finance_mixed_summary.yml  finance_mixed_summary_5days.yml  finance_numerical.yml  finance_numerical_5days.yml  finance_summary.yml  gas-west.yml  gas.yml  gas_2week_mixed_mixed_fact.yml  gas_2week_text_text_fact.yml  gas_mixed_mixed.yml  gas_mixed_mixed_fact.yml  gas_text_text.yml  gas_text_text_fact.yml  medical.yml  myconfig.yml  outputs  qlora.yml
notebook/: gpt_process_data.ipynb  gpt_score.ipynb
src/: Upload.ipynb  Upload_finance.ipynb  Upload_fixed_finance.ipynb  Upload_fixed_mixed_finance.ipynb  Upload_random_finance.ipynb  apichat.py  batch_inference_chat.py  climate.py  dart.py  dart_test.py  dart_test_gas.py  dev.ipynb  eval_text.ipynb  file_evaluation.py  finance_multimodal.py  gas.py  gpt_score.py  hybrid.py  hybrid_test.ipynb  input_copy.py  (+26 more)
(+129 files in other folders)
