[tool.poetry]
name = "multimodal"
version = "0.1.0"
description = ""
authors = ["Howard <cht028@ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
transformers = "^4.40.2"
datasets = "^2.19.1"
loguru = "^0.7.2"
torch = "^2.3.0"
wandb = "^0.17.0"
tqdm = "^4.66.4"
accelerate = "^0.30.1"
num2words = "^0.5.13"
boto3 = "^1.34.108"
bitsandbytes = "^0.43.1"
xformers = "^0.0.26.post1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
