[tool.poetry]
name = "multimodal"
version = "0.1.0"
description = ""
authors = ["Howard <cht028@ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
datasets = "^2.19.1"
loguru = "^0.7.2"
wandb = "^0.17.0"
tqdm = "^4.66.4"
accelerate = "^0.30.1"
num2words = "^0.5.13"
boto3 = "^1.34.108"
bitsandbytes = "^0.43.1"
deepspeed = "^0.14.2"
ninja = "^1.11.1.1"
s5cmd = "^0.2.0"
peft = "^0.11.1"
flash-attention = "^1.0.0"
darts = "^0.30.0"
rouge-score = "^0.1.2"
nltk = "^3.8.1"
scikit-learn = "^1.5.1"
sentence-transformers = "^3.0.1"
openai = "^1.37.2"
transformers = "^4.43.4"
torch = "2.4.0"
xformers = "^0.0.27.post2"
vllm = "^0.5.4"
pygments = "^2.18.0"
lm-format-enforcer = "^0.10.6"
docker = "^7.1.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
